correction scrollbar body

--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -132,7 +132,7 @@
     .content-presentation {
         margin-left: 1.5rem;
         margin-right: 1.5rem;
-        width: calc(100vw - 3rem);
+        width: calc(100% - 3rem);
         margin-bottom: 10vh;
     }
 
@@ -174,7 +174,7 @@
     .content-presentation {
         margin-left: 1rem;
         margin-right: 1rem;
-        width: calc(100vw - 2rem);
+        width: calc(100% - 2rem);
         margin-bottom: 15vh;
     }
 
